--- a/index.html
+++ b/index.html
@@ -1110,17 +1110,22 @@
 
         // Инициализация при загрузке страницы
         document.addEventListener('DOMContentLoaded', function() {
-            console.log('🌟 IskrCLOCK загружен');
+            console.log('═══════════════════════════════════════════════════════');
+            console.log('🌟 IskrCLOCK v2.1 ЗАГРУЖЕН');
+            console.log('📅 Версия от 10 октября 2025');
+            console.log('═══════════════════════════════════════════════════════');
             console.log('📻 Версия с реальными радиопотоками для GitHub Pages');
             console.log('🎵 Доступные станции:');
             console.log('   🎧 NTS Radio 1 & 2 (London)');
             console.log('   🎧 Rinse FM (London & Paris)');
             console.log('   🎧 Европа Плюс, Radio Energy, Love Radio, Hit FM, Monte Carlo');
             console.log('');
-            console.log('🔊 Новая улучшенная система управления звуком');
+            console.log('🔊 ВЕРСИЯ 2.1 - ИСПРАВЛЕНА ПРОБЛЕМА СО ЗВУКОМ');
+            console.log('   - Флаг isRadioPlaying устанавливается ДО проверки');
             console.log('   - Используется единый audioElement');
             console.log('   - Гарантированная остановка при повторном нажатии');
             console.log('   - Подробное логирование всех действий');
+            console.log('═══════════════════════════════════════════════════════');
             
             // Создаем звезды
             createStars();
@@ -1171,13 +1176,14 @@
             });
             
             console.log('✅ Все обработчики событий подключены');
-            console.log('🎉 IskrCLOCK полностью готов к работе!');
+            console.log('🎉 IskrCLOCK v2.1 полностью готов к работе!');
             console.log('');
             console.log('💡 Советы:');
             console.log('   - Попробуйте NTS Radio 1 или 2 для лучшего качества');
             console.log('   - Rinse FM - легендарная лондонская станция');
             console.log('   - Используйте классический сигнал если радио не работает');
             console.log('   - Откройте консоль чтобы видеть что происходит');
+            console.log('═══════════════════════════════════════════════════════');
         });
     </script>
 </body>
