--- a/index.html
+++ b/index.html
@@ -1111,8 +1111,8 @@
         // Инициализация при загрузке страницы
         document.addEventListener('DOMContentLoaded', function() {
             console.log('═══════════════════════════════════════════════════════');
-            console.log('🌟 IskrCLOCK v2.1 ЗАГРУЖЕН');
-            console.log('📅 Версия от 10 октября 2025');
+            console.log('🌟 IskrCLOCK v2.2 ЗАГРУЖЕН');
+            console.log('📅 Версия от 10 октября 2025 - 16:50');
             console.log('═══════════════════════════════════════════════════════');
             console.log('📻 Версия с реальными радиопотоками для GitHub Pages');
             console.log('🎵 Доступные станции:');
@@ -1120,11 +1120,10 @@
             console.log('   🎧 Rinse FM (London & Paris)');
             console.log('   🎧 Европа Плюс, Radio Energy, Love Radio, Hit FM, Monte Carlo');
             console.log('');
-            console.log('🔊 ВЕРСИЯ 2.1 - ИСПРАВЛЕНА ПРОБЛЕМА СО ЗВУКОМ');
-            console.log('   - Флаг isRadioPlaying устанавливается ДО проверки');
-            console.log('   - Используется единый audioElement');
-            console.log('   - Гарантированная остановка при повторном нажатии');
-            console.log('   - Подробное логирование всех действий');
+            console.log('🔊 ВЕРСИЯ 2.2 - РАСШИРЕННОЕ ЛОГИРОВАНИЕ');
+            console.log('   - Детальные логи установки флага isRadioPlaying');
+            console.log('   - Логи каждого вызова playChord');
+            console.log('   - Отладка проблемы со звуком');
             console.log('═══════════════════════════════════════════════════════');
             
             // Создаем звезды
@@ -1176,7 +1175,7 @@
             });
             
             console.log('✅ Все обработчики событий подключены');
-            console.log('🎉 IskrCLOCK v2.1 полностью готов к работе!');
+            console.log('🎉 IskrCLOCK v2.2 полностью готов к работе!');
             console.log('');
             console.log('💡 Советы:');
             console.log('   - Попробуйте NTS Radio 1 или 2 для лучшего качества');
